--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
-	<head>
-	</head>
+<head>
+</head>
 	<title>demo</title>
 <body>
-	</body>
+	<h1>This is a Demo heading</h1>
+	<p>Paragraph for Demo </p>
+</body>
 </html>
 
