--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <html>
 <head>
+	<!-- please use css style tag here.--!>
+	<style>
+	h1{
+	  text-color:red;
+	  text-size: 20px;
+	}
+        P{
+	  color: blue;
+	  size: 10px;
+	}
 </head>
 	<title>demo</title>
 <body>
